k8s/networking/envoy-gateway/templates/envoy-external.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-external
  annotations:
    external.mfin.app/managed: "true"
    external-dns.alpha.kubernetes.io/target: ext.mfin.app
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: ext.mfin.app
      external.mfin.app/managed: "true"
      lbipam.cilium.io/ips: 10.10.0.252
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: homelab-cert
