k8s/networking/envoy-gateway/templates/envoy-media.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-media
  annotations:
    external.mfin.app/managed: "true"
    external-dns.alpha.kubernetes.io/target: 10.10.0.253
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: ext.dnevna.com
      external.mfin.app/managed: "true"
      lbipam.cilium.io/ips: 10.10.0.253
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: media-cert
